# fitracker

./: Cargo.toml
migrations/2026-01-27-133632-0000_users/: up.sql
src/: dtos.rs  errors.rs  main.rs  schema.rs
src/controllers/: user_controllers.rs
src/db/: pool.rs
src/models/: user.rs
src/repositories/: user_repositories.rs
src/routes/: user_routes.rs
src/services/: user_services.rs
