[package]
name = "fitracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
bcrypt = "0.18.0"
chrono = "0.4.43"
diesel = { version = "2.3.6", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = "1.20.0"
