[package]
name = "fitracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
bcrypt = "0.18.0"
diesel = { version = "2.3.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
